--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Spiral Generator</title>
+        <title>Card City</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <!-- gives a canvas to draw too -->
         <canvas id = "canvas1"></canvas>
-        <script src="script.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
