code organization, building animations, unit animations, and a lot of bug fixing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
     <body>
         <!-- gives a canvas to draw too -->
         <canvas id = "canvas1"></canvas>
-        <script src="index.js"></script>
+        <div id = "tempHolder"></div>
+        <script src="./js/setUp.js"></script>
+        <script src="./js/drawFunctions/drawCoin.js"></script>
+        <script src="./js/drawFunctions/drawTopDisplayBar.js"></script>
+        <script src="./js/classes/Tile.js"></script>
+        <script src="./js/drawFunctions/drawTiles.js"></script>
+        <script src="./js/classes/Unit.js"></script>
+        <script src="./js/drawFunctions/drawUnitShot.js"></script>
+        <script src="./js/drawFunctions/drawUnit.js"></script>
+        <script src="./js/classes/Maniple.js"></script>
+        <script src="./js/classes/Building.js"></script>
+        <script src="js/drawFunctions/drawSettlement.js"></script>
+        <script src="./js/classes/Settlement.js"></script>
+        <script src="./js/drawFunctions/drawFort.js"></script>
+        <script src="./js/drawFunctions/drawCardBase.js"></script>
+        <script src="./js/classes/Fort.js"></script>
+        <script src="./js/drawFunctions/drawSword.js"></script>
+        <script src="./js/drawFunctions/drawManipleCard.js"></script>
+        <script src="./js/drawFunctions/drawFortCard.js"></script>
+        <script src="./js/classes/Card.js"></script>
+        <script src="./js/utils/handHanler.js"></script>
+        <script src="./js/utils/unitMoveAndAttack.js"></script>
+        <script src="./js/utils/checkUnitsThree.js"></script>
+        <script src="./js/utils/tileRefresh.js"></script>
+        <script src="./js/utils/turnHandler.js"></script>
+
+        <script src="./js/index.js"></script>
     </body>
 </html>
