implemented a tech tree screen as well as five buildings

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <!-- gives a canvas to draw too -->
         <canvas id = "canvas1"></canvas>
+        <canvas id = "canvas2"></canvas>
         <div id = "tempHolder"></div>
         <script src="./js/setUp.js"></script>
         <script src="./js/animationLayers/addLayer.js"></script>
-        <script src="./js/animationLayers/setUpLayer.js"></script>
         <script src="./js/drawFunctions/drawCoin.js"></script>
         <script src="./js/drawFunctions/drawTopDisplayBar.js"></script>
         <script src="./js/classes/Tile.js"></script>
@@ -27,21 +27,36 @@
         <script src="./js/drawFunctions/drawUnitShotY.js"></script>
         <script src="./js/drawFunctions/drawUnit.js"></script>
         <script src="./js/classes/Maniple.js"></script>
-        <script src="./js/classes/Building.js"></script>
-        <script src="js/drawFunctions/drawSettlement.js"></script>
-        <script src="./js/classes/Settlement.js"></script>
-        <script src="./js/drawFunctions/drawFort.js"></script>
+        <script src="./js/classes/buildingClasses/Building.js"></script>
+        <script src="js/drawFunctions/buildings/drawSettlement.js"></script>
+        <script src="./js/classes/buildingClasses/Settlement.js"></script>
+        <script src="./js/drawFunctions/buildings/drawFort.js"></script>
         <script src="./js/drawFunctions/drawCardBase.js"></script>
-        <script src="./js/classes/Fort.js"></script>
+        <script src="./js/classes/buildingClasses/Fort.js"></script>
+        <script src="./js/drawFunctions/buildings/drawFortress.js"></script>
+        <script src="./js/classes/buildingClasses/Fortress.js"></script>
+        <script src="./js/drawFunctions/buildings/drawBank.js"></script>
+        <script src="./js/classes/buildingClasses/Bank.js"></script>
+        <script src="./js/drawFunctions/buildings/drawArmory.js"></script>
+        <script src="./js/classes/buildingClasses/Armory.js"></script>
+        <script src="./js/drawFunctions/buildings/drawRange.js"></script>
+        <script src="./js/classes/buildingClasses/Range.js"></script>
+        <script src="./js/drawFunctions/buildings/drawWall.js"></script>
+        <script src="./js/classes/buildingClasses/Wall.js"></script>    
         <script src="./js/drawFunctions/drawSword.js"></script>
         <script src="./js/drawFunctions/drawManipleCard.js"></script>
         <script src="./js/drawFunctions/drawFortCard.js"></script>
-        <script src="./js/classes/Card.js"></script>
+        <script src="./js/classes/Card.js"></script> 
+        <script src="./js/classes/Tech.js"></script>
+        <script src="./js/drawFunctions/drawTechScreen.js"></script>
         <script src="./js/utils/handHanler.js"></script>
         <script src="./js/utils/unitMoveAndAttack.js"></script>
         <script src="./js/utils/checkUnitsThree.js"></script>
         <script src="./js/utils/tileRefresh.js"></script>
         <script src="./js/utils/turnHandler.js"></script>
+        
+        <script src="./js/utils/displayTechScreen.js"></script>
+        <script src="./js/utils/topDisplayClick.js"></script>
 
         <script src="./js/index.js"></script>
     </body>
