added a bunch of new cards for the tech Screen upgrade

--- a/index.html
+++ b/index.html
@@ -44,20 +44,22 @@
         <script src="./js/drawFunctions/buildings/drawWall.js"></script>
         <script src="./js/classes/buildingClasses/Wall.js"></script>    
         <script src="./js/drawFunctions/drawSword.js"></script>
+        <script src="./js/drawFunctions/cards/drawWallCard.js"></script>
+        <script src="./js/drawFunctions/cards/drawFortressCard.js"></script>
+        <script src="./js/drawFunctions/cards/drawBankCard.js"></script>
+        <script src="./js/drawFunctions/cards/drawArmoryCard.js"></script>
         <script src="./js/drawFunctions/drawManipleCard.js"></script>
         <script src="./js/drawFunctions/drawFortCard.js"></script>
         <script src="./js/classes/Card.js"></script> 
         <script src="./js/classes/Tech.js"></script>
         <script src="./js/drawFunctions/drawTechScreen.js"></script>
-        <script src="./js/utils/handHanler.js"></script>
+        <script src="./js/utils/handHandler.js"></script>
         <script src="./js/utils/unitMoveAndAttack.js"></script>
         <script src="./js/utils/checkUnitsThree.js"></script>
         <script src="./js/utils/tileRefresh.js"></script>
         <script src="./js/utils/turnHandler.js"></script>
-        
         <script src="./js/utils/displayTechScreen.js"></script>
         <script src="./js/utils/topDisplayClick.js"></script>
-
         <script src="./js/index.js"></script>
     </body>
 </html>
